--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,8 @@
 services:
   - type: web
     name: livro-api
-    env: java
+    env: docker
     region: oregon
     plan: free
-    buildCommand: ./mvnw clean package -Dquarkus.package.type=uber-jar
-    startCommand: java -jar target/quarkus-app/quarkus-run.jar
     healthCheckPath: /q/health/live
     autoDeploy: true
