Adiciona render.yaml para deploy no Render.com

--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,12 @@
 services:
   - type: web
     name: livro-api
-    env: docker
+    env: java
     region: oregon
     plan: free
+    envVars:
+      - key: JAVA_VERSION
+        value: 21
+    buildCommand: ./mvnw clean package -Dquarkus.package.type=uber-jar
+    startCommand: java -jar target/quarkus-app/quarkus-run.jar
     healthCheckPath: /q/health/live
-    autoDeploy: true
