--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 services:
   - type: web
     name: livro-api
-    runtime: openjdk
+    # A linha abaixo foi alterada para 'docker'
+    runtime: docker
     region: oregon
     plan: free
-    envVars:
-      - key: JAVA_VERSION
-        value: 21
-    buildCommand: ./mvnw clean package -Dquarkus.package.type=uber-jar
-    startCommand: java -jar target/quarkus-app/quarkus-run.jar
+    # Removemos o bloco envVars, buildCommand e startCommand
+    # O Dockerfile agora cuida de tudo isso.
     healthCheckPath: /q/health/live
+    # Adicione o caminho do Dockerfile (opcional, mas bom para clareza)
+    dockerfilePath: ./Dockerfile
